--- a/components/SectionContact/ContactHero/ContactHero.module.scss
+++ b/components/SectionContact/ContactHero/ContactHero.module.scss
@@ -15,6 +15,8 @@
 }
 
 .heroInner {
+  position: relative;
+  z-index: 5;
   @include layout.flex(center, center, column);
   @include animations.fade-up;
   gap: 48px;
@@ -38,7 +40,6 @@
 
 .content {
   @include layout.flex(center, center, column);
-  z-index: 1;
   width: 100%;
   gap: 24px;
 
